<resources>
    <string name="app_name">SORMAS</string>
    <string name="and">and</string>
    <string name="no">No</string>
    <string name="notAnswered">Not answered</string>
    <string name="system">System</string>
    <string name="yes">Yes</string>
    <string name="all">All</string>
    <string name="completed">completed</string>
    <string name="action_add_missing_case">Add Missing Case</string>
    <string name="action_allow_gps_access">Allow GPS Access</string>
    <string name="action_apply_filters">Apply filters</string>
    <string name="action_back_to_settings">Back to settings</string>
    <string name="action_generate_password">Generate Password</string>
    <string name="action_strength_password">Password Strength</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change_PIN">Change PIN</string>
    <string name="action_backup_db">Backup DB</string>
    <string name="action_restore_db">Restore DB</string>
    <string name="action_change_settings"><u>Change Settings</u></string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_close_app">Close SORMAS</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_create">Create</string>
    <string name="action_create_case_from_contact">Create a case for this contact person</string>
    <string name="action_create_case_from_event_person">Create a case for this event person</string>
    <string name="action_create_treatment">Create treatment</string>
    <string name="action_edit_data">Edit data</string>
    <string name="action_continue_synchronize_data">Continue</string>
    <string name="action_synchronize_data_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_done">Done</string>
    <string name="action_download">Download</string>
    <string name="action_download_background">Download in background</string>
    <string name="action_download_later">Later</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_case">Edit Case</string>
    <string name="action_edit_contact">Edit Contact</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="action_edit_sample">Edit Sample</string>
    <string name="action_forgot_PIN">Forgot PIN?</string>
    <string name="action_help">Help</string>
    <string name="action_install_app">Install</string>
    <string name="action_install_later">Install later</string>
    <string name="action_loadMore">Load more</string>
    <string name="action_login">Sign in</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_login_default_user">Sign in as demo user</string>
    <string name="action_logout">Logout</string>
    <string name="action_logout_anyway">Logout anyway</string>
    <string name="action_markAllAsRead">Mark all as read</string>
    <string name="action_new">New</string>
    <string name="action_new_case">New Case</string>
    <string name="action_new_immunization">New Immunization</string>
    <string name="action_new_campaign_form_data">New Campaign Form Data</string>
    <string name="action_new_contact">New Contact</string>
    <string name="action_new_event">New Event</string>
    <string name="action_new_ebs">New Ebs</string>
    <string name="action_new_triaging">New Triaging</string>
    <string name="action_new_risk_assessment">New Risk Assessment</string>
    <string name="action_new_alert">New Alert</string>
    <string name="caption_action_initiated">ACTION INITIATED: </string>
    <string name="caption_response_status">RESPONSE STATUS: </string>
    <string name="caption_alert_issued">ALERT ISSUED: </string>
    <string name="action_new_sample">New Sample</string>
    <string name="action_new_task">New Task</string>
    <string name="action_not_executable">Not Executable</string>
    <string name="action_ok">OK</string>
    <string name="action_open_event_person_case">Open Case of Event Person</string>
    <string name="action_open_prescription">Open Prescription</string>
    <string name="action_open_resulting_case">Open Resulting Case</string>
    <string name="action_open_source_case">Open Source Case</string>
    <string name="action_open_linked_case">Open Linked Case</string>
    <string name="action_link_case">Link Case</string>
    <string name="action_open_syncLog">Synchronization conflicts</string>
    <string name="action_options">Options</string>
    <string name="action_pick_gps">Pick current GPS for address</string>
    <string name="action_redownload_app">Redownload</string>
    <string name="action_redownload_app_later">Redownload later</string>
    <string name="action_refer_case_from_poe">Refer case from Point of Entry</string>
    <string name="action_report">Report Problem</string>
    <string name="action_repull_data">Re-synchronize data</string>
    <string name="action_resync_form_builder">Re-synchronize Form Builder</string>
    <string name="action_reset_filters">Reset filters</string>
    <string name="action_save">Save</string>
    <string name="action_save_case">Save Case</string>
    <string name="action_save_clinical_visit">Save Clinical Visit</string>
    <string name="action_save_contact">Save Contact</string>
    <string name="action_save_event">Save Event</string>
    <string name="action_save_ebs">Save Signal</string>
    <string name="action_save_triaging">Save Triaging</string>
    <string name="action_save_signal_verification">Save Signal Verification</string>
    <string name="action_save_risk_assessment">Save Risk Assessment</string>
    <string name="action_save_alert">Save Alert</string>
    <string name="action_save_event_participant">Save Event Participant</string>
    <string name="action_save_prescription">Save Prescription</string>
    <string name="action_save_sample">Save Sample</string>
    <string name="action_save_task">Save Task</string>
    <string name="action_save_treatment">Save Treatment</string>
    <string name="action_save_visit">Save Follow-up Visit</string>
    <string name="action_select">Select</string>
    <string name="action_send">Send</string>
    <string name="action_set_cleared_to_no">Set Cleared to No</string>
    <string name="action_set_cleared_to_unknown">Set Cleared to Unknown</string>
    <string name="action_show_classification_rules">View classification rules</string>
    <string name="action_submit_report">Submit Weekly Report</string>
    <string name="action_sync">Sync</string>
    <string name="action_transfer_case">Transfer case</string>
    <string name="action_synchronize_data">Do you want to synchronize with sormas server?</string>
    <string name="action_try_again">Try again</string>
    <string name="action_turn_on_gps">Turn On GPS</string>
    <string name="action_update_search">Update search</string>
    <string name="action_save_pathogen_test">Save Pathogen Test</string>
    <string name="action_edit_pathogen_test">Edit Pathogen Test</string>
    <string name="action_submit_case_numbers">Submit Case Numbers</string>
    <string name="action_kex_lbds">LBDS Key Exchange</string>
    <string name="action_sync_person_lbds">LBDS Sync Persons</string>
    <string name="action_sync_case_lbds">LBDS Sync Cases</string>
    <string name="action_save_vaccination">Save Vaccination</string>
    <string name="action_edit_vaccination">Edit Vaccination</string>
    <string name="caption_address">Address</string>
    <string name="caption_age">Age</string>
    <string name="caption_attended_by">Attended by</string>
    <string name="caption_case_clinical_visits">Clinical Assessments</string>
    <string name="caption_case_contacts">Case Contacts</string>
    <string name="caption_case_epidemiological_data">Epidemiological Data</string>
    <string name="caption_case_fatality_rate">Case Fatality Rate</string>
    <string name="caption_case_health_conditions">Pre-Existing Conditions</string>
    <string name="caption_case_hospitalization">Hospitalization Info</string>
    <string name="caption_case_riskfactor">Risk Mapping Info</string>
    <string name="caption_case_information">Case Information</string>
    <string name="caption_case_maternal_history">Maternal History</string>
    <string name="caption_case_port_health_info">Port Health Info</string>
    <string name="caption_case_prescriptions">Prescriptions</string>
    <string name="caption_case_samples">Case Samples</string>
    <string name="caption_case_tasks">Case Tasks</string>
    <string name="caption_case_events">Case Events</string>
    <string name="caption_case_immunizations">Case Immunizations</string>
    <string name="caption_case_vaccinations">Case Vaccinations</string>
    <string name="caption_case_risk_factors">Risk Factors</string>
    <string name="caption_case_food_history">Food History</string>
    <string name="caption_case_investigation_notes">Investigation Notes</string>
    <string name="caption_case_afp_immunization">Immunization History</string>
    <string name="caption_case_sixy_day">60-Day Follow Up</string>
    <string name="caption_case_food_sample_testing">Food Sample Testing</string>
    <string name="caption_case_treatments">Treatments</string>
    <string name="caption_case_similarity_create">Create a new case</string>
    <string name="caption_changed_data_lost">Changed data lost during re-sync.</string>
    <string name="caption_clinical_measurements">Clinical Measurements</string>
    <string name="caption_clinical_visit_date">Date of Assessment</string>
    <string name="caption_clinical_visit_information">Assessment Information</string>
    <string name="caption_clinical_visit_time">Time of Assessment</string>
    <string name="caption_confirmation_date">Confirmation Date: %1$s</string>
    <string name="caption_confirmed">Confirmed</string>
    <string name="caption_confirmed_case">Confirmed Case</string>
    <string name="caption_confirmed_events">Confirmed Events</string>
    <string name="caption_contact_information">Contact Information</string>
    <string name="caption_contact_tasks">Contact Tasks</string>
    <string name="caption_contact_epidemiological_data">Epidemiological info</string>
    <string name="caption_contact_visits">Follow-Up Information</string>
    <string name="caption_contact_immunizations">Contact Immunizations</string>
    <string name="caption_contact_vaccinations">Contact Vaccinations</string>
    <string name="caption_converted_to_case">Converted to Case</string>
    <string name="caption_date_of_birth">Date of birth (year / month / day)</string>
    <string name="caption_health_staff_details">Health staff, details:</string>
    <string name="caption_date_of_sampling">Date of Sampling</string>
    <string name="caption_drawer_close">Close navigation drawer</string>
    <string name="caption_drawer_open">Open navigation drawer</string>
    <string name="caption_dropped">Dropped</string>
    <string name="caption_epi_week">Epi Week</string>
    <string name="caption_report">Report</string>
    <string name="hint_source_information">Source Information</string>
    <string name="info_low_risk_header">LOW</string>
    <string name="heading_recomended_actions">RECOMMENDED ACTIONS</string>
    <string name="heading_notification_type">NOTIFICATION TYPE</string>
    <string name="heading_notification_action">NOTIFICATION ACTION</string>
    <string name="info_low_rec_actions">Manage according to standard response protocols, routine control programs and regulations (e.g. monitoring through routine surveillance systems)</string>
    <string name="info_low_notification_type">Immediately report event on SORMAS and notify next level, as appropriate.</string>
    <string name="info_low_notification_action">Continue to monitor; repeat risk assessment if situation changes.</string>
</resources>